<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>hwr.oop</groupId>
    <artifactId>hwr-oop-lecture-shared</artifactId>
    <version>0.1.0-SNAPSHOT</version>
  </parent>

  <artifactId>poker</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- java -->
    <java.version>21</java.version>
    <!-- build tool -->
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <!-- dependencies -->
    <jcommander.version>1.83</jcommander.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.jcommander</groupId>
      <artifactId>jcommander</artifactId>
      <version>${jcommander.version}</version>
    </dependency>
  </dependencies>

</project>